Fixed z-index for safari
added webkit transform to content

--- a/brillianideas/brillianIDEAS/css/curriculum.css
+++ b/brillianideas/brillianIDEAS/css/curriculum.css
@@ -20,6 +20,11 @@ html {
 	overflow: hidden;
 }
 
+#content {
+	-webkit-transform: translate3d(0,0,0);
+}
+
+
 a:link {
     text-decoration: none;
     color: #991b33;
